--- a/index.html
+++ b/index.html
@@ -1,38 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>LMV Poetry</title>
-<link rel="stylesheet" href="assets/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>LMV Poetry</title>
+  <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-<header>
-  <h1>LMV</h1>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="poems/">Poems</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-</header>
+  <!-- Fixed Top Bar -->
+  <header class="site-header">
+    <div class="logo">
+      <img src="assets/flower.svg" alt="flower" class="flower-icon">
+      <h1>LMV</h1>
+    </div>
+    <nav class="navbar">
+      <a href="index.html">Home</a>
+      <a href="poems/">Poems</a>
+      <a href="short-stories/">Short Stories</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
 
-<main>
-  <section class="intro">
-    <p>Welcome to the world of LMV — poetry, reflections, and fleeting thoughts captured in words.</p>
-  </section>
+  <!-- Main Content -->
+  <main>
+    <!-- Intro Section -->
+    <section class="intro">
+      <h2>Welcome</h2>
+      <p>Welcome to the world of LMV — poetry, reflections, and fleeting thoughts captured in words. Explore poems and short stories, or learn more about the author.</p>
+    </section>
 
-  <section class="latest-poems">
-    <h2>Latest Poems</h2>
-    <ul>
-      <li><a href="poems/poem1.html">Poem One</a></li>
-      <li><a href="poems/poem2.html">Poem Two</a></li>
-    </ul>
-  </section>
-</main>
+    <!-- Latest Poems Section -->
+    <section class="latest-poems">
+      <h2>Latest Poems</h2>
+      <ul>
+        <li><a href="poems/poem1.html">Poem One</a></li>
+        <li><a href="poems/poem2.html">Poem Two</a></li>
+        <li><a href="poems/poem3.html">Poem Three</a></li>
+      </ul>
+    </section>
 
-<footer>
-  <p>Follow LMV on <a href="https://instagram.com/lmv.author" target="_blank">Instagram</a> | Contact: <a href="mailto:lmv.author@proton.me">lmv.author@proton.me</a></p>
-</footer>
+    <!-- Short Stories Section -->
+    <section class="short-stories">
+      <h2>Latest Short Stories</h2>
+      <ul>
+        <li><a href="short-stories/story1.html">Story One</a></li>
+        <li><a href="short-stories/story2.html">Story Two</a></li>
+      </ul>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    <p>Follow LMV on <a href="https://instagram.com/lmv.author" target="_blank">Instagram</a> | Contact: <a href="mailto:lmv.author@proton.me">lmv.author@proton.me</a></p>
+    <p>This site was created with the assistance of ChatGPT 5</p>
+  </footer>
 </body>
 </html>
