--- a/index.html
+++ b/index.html
@@ -7,48 +7,45 @@
   <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-  <!-- Fixed Top Bar -->
-  <header class="site-header">
-    <div class="logo">
-      <img src="assets/flower.svg" alt="flower" class="flower-icon">
-      <h1>LMV</h1>
-    </div>
-    <nav class="navbar">
-      <a href="index.html">Home</a>
-      <a href="poems/">Poems</a>
-      <a href="short-stories/">Short Stories</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
 
-  <!-- Main Content -->
-  <main>
-    <!-- Intro Section -->
-    <section class="intro">
-      <h2>Welcome</h2>
-      <p>Welcome to the world of LMV — poetry, reflections, and fleeting thoughts captured in words. Explore poems and short stories, or learn more about the author.</p>
-    </section>
+<!-- Fixed Header -->
+<header class="site-header">
+  <div class="logo">
+    <img src="assets/flower.svg" alt="flower" class="flower-icon">
+    <h1>LMV</h1>
+  </div>
+  <nav class="navbar">
+    <a href="index.html">Home</a>
+    <a href="poems/">Poems</a>
+    <a href="short-stories/">Short Stories</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
 
-    <!-- Latest Poems Section -->
-    <section class="latest-poems">
-      <h2>Latest Poems</h2>
-      <ul>
-        <li><a href="poems/poem1.html">Poem One</a></li>
-        <li><a href="poems/poem2.html">Poem Two</a></li>
-        <li><a href="poems/poem3.html">Poem Three</a></li>
-      </ul>
-    </section>
+<!-- Main Content -->
+<main>
+  <section class="intro">
+    <h2>Welcome</h2>
+    <p>Welcome to the world of LMV — poetry, reflections, and fleeting thoughts captured in words.</p>
+  </section>
 
-    <!-- Short Stories Section -->
-    <section class="short-stories">
-      <h2>Latest Short Stories</h2>
-      <ul>
-        <li><a href="short-stories/story1.html">Story One</a></li>
-        <li><a href="short-stories/story2.html">Story Two</a></li>
-      </ul>
-    </section>
-  </main>
+  <section class="latest-poems">
+    <h2>Latest Poems</h2>
+    <ul>
+      <li><a href="poems/poem1.html">Poem One</a></li>
+      <li><a href="poems/poem2.html">Poem Two</a></li>
+    </ul>
+  </section>
+
+  <section class="short-stories">
+    <h2>Latest Short Stories</h2>
+    <ul>
+      <li><a href="short-stories/story1.html">Story One</a></li>
+      <li><a href="short-stories/story2.html">Story Two</a></li>
+    </ul>
+  </section>
+</main>
 
   <!-- Footer -->
   <footer>
