--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LMV Poetry</title>
+  <title>LMV Author</title>
   <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
 <!-- Fixed Header -->
 <header class="site-header">
   <div class="logo">
-    <img src="assets/flower.svg" alt="flower" class="flower-icon">
+    <img src="assets/flower.jpg" alt="flower" class="flower-icon">
     <h1>Lara Mac Veeameroi </h1>
   </div>
   <nav class="navbar">
