--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>Follow LMV on <a href="https://instagram.com/lmv.author" target="_blank">Instagram</a> | Contact: <a href="mailto:lmv.author@proton.me">lmv.author@proton.me</a></p>
+    <p>Follow Lara Mac Veeameroi on <a href="https://instagram.com/lmv.author" target="_blank">Instagram</a> | Contact: <a href="mailto:lmv.author@proton.me">lmv.author@proton.me</a></p>
     <p>This site was created with the assistance of ChatGPT 5</p>
   </footer>
 </body>
