--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header class="site-header">
   <div class="logo">
     <img src="assets/flower.jpg" alt="flower" class="flower-icon">
-    <h1>Lara Mac Veeameroi </h1>
+    <h1>Lara Mac Veeameroi - Author </h1>
   </div>
   <nav class="navbar">
     <a href="index.html">Home</a>
@@ -27,7 +27,7 @@
 <main>
   <section class="intro">
     <h2>Welcome</h2>
-    <p>Welcome to the world of Lara Mac Veeameroi — poetry, tales, and thoughts captured in words.</p>
+    <p>Welcome to the official website of Lara Mac Veeameroi — poet, writer and thinker.</p>
   </section>
 
   <section class="latest-poems">
