--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <!-- Fixed Header -->
 <header class="site-header">
   <div class="logo">
-    <img src="assets/flower.jpg" alt="flower" class="flower-icon">
-    <h1>Lara Mac Veeameroi - Author </h1>
+    <img src="assets/flower.svg" alt="flower" class="flower-icon">
+    <h1>LMV</h1>
   </div>
   <nav class="navbar">
     <a href="index.html">Home</a>
@@ -22,6 +22,7 @@
     <a href="contact.html">Contact</a>
   </nav>
 </header>
+
 
 <!-- Main Content -->
 <main>
