--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- Fixed Header -->
 <header class="site-header">
   <div class="logo">
-    <img src="assets/flower.svg" alt="flower" class="flower-icon">
+    <img src="assets/flower.jpg" alt="flower" class="flower-icon">
     <h1>LMV</h1>
   </div>
   <nav class="navbar">
