--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header class="site-header">
   <div class="logo">
     <img src="assets/flower.jpg" alt="flower" class="flower-icon">
-    <h1>LMV</h1>
+    <h1>Lara Mac Veeameroi - Author</h1>
   </div>
   <nav class="navbar">
     <a href="index.html">Home</a>
