--- a/index.html
+++ b/index.html
@@ -23,12 +23,10 @@
   </nav>
 </header>
 
-
-
 <!-- Main Content -->
 <main>
   <section class="intro">
-    <h2>Welcome</h2>
+    <!-- <h2>Welcome</h2>-->
     <p>Welcome to the official website of Lara Mac Veeameroi — poet, writer and thinker.</p>
   </section>
 
