--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   </div>
   <nav class="navbar">
     <a href="index.html">Home</a>
-    <a href="poems/">Poems</a>
-    <a href="short-stories/">Short Stories</a>
+    <a href="poems.html">Poems</a>
+    <a href="short-stories.html">Short Stories</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
   </nav>
