--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
   <section class="latest-poems">
     <h2>Latest Poems</h2>
     <ul>
-      <li><a href="poems/poem1.html">Poem One</a></li>
-      <li><a href="poems/poem2.html">Poem Two</a></li>
+      <li><a href="poems.html#poem-2025-1">Test Poem 1</a></li>
+      <li><a href="poems.html#poem-2024-1">Test Poem 2</a></li>
     </ul>
   </section>
 
