--- a/poems.html
+++ b/poems.html
@@ -56,6 +56,7 @@
 Line one of the poem,
 line two of the poem.
       </pre>
+      <button onclick="navigator.clipboard.writeText(window.location.href.split('#')[0] + '#poem-2025-1'); alert('Link copied!')">Copy Link</button>
     </article>
 
     <article id="poem-2024-1" class="poem-item" data-year="2024" data-lang="it">
