--- a/poems.html
+++ b/poems.html
@@ -50,14 +50,14 @@
   <!-- Poems list -->
   <section class="poem-list">
     <article id="poem-2025-1" class="poem-item" data-year="2025" data-lang="en">
-      <h3>The Quiet House</h3>
-      <p class="meta">2025 • English</p>
+      <h3>Poesia di primavera</h3>
+      <p class="meta">1999 • Italian</p>
       <pre>
-Line one of the poem,
-line two of the poem.
+1
+2
       </pre>
       <button onclick="navigator.clipboard.writeText(window.location.href.split('#')[0] + '#poem-2025-1'); alert('Link copied!')">Copy Link</button>
-    </article>
+    </article> 
 
     <article id="poem-2024-1" class="poem-item" data-year="2024" data-lang="it">
       <h3>La strada di vento</h3>
