--- a/poems.html
+++ b/poems.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+c<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -82,7 +82,7 @@ Ma a volte si fa crudele il fato.
 Quante anime hai già reclamato?
       </pre>
       <h4>Genesis</h4>
-      <p class="meta">This poem is a dedication to Janosch, who left this life in a climbing accident in early 2015, while climbing in Panama</p>
+      <p class="meta">This poem is dedicated to Janosch, who left this life in a climbing accident in early 2015, while in vacation in Panama.</p>
       <button onclick="navigator.clipboard.writeText(window.location.href.split('#')[0] + '#poem-2025-1'); alert('Link copied!')">Copy Link</button>
     </article> 
 
