--- a/poems.html
+++ b/poems.html
@@ -82,25 +82,32 @@ Ma a volte si fa crudele il fato.
 Quante anime hai già reclamato?
       </pre>
       <h4>Genesis</h4>
-      <p class="meta">This poem is dedicated to Janosch, who left this life in a climbing accident in early 2015, while in vacation in Panama.</p>
+      <p class="meta">
+  This poem is dedicated to Janosch, who left this life in a climbing accident in early 2015, while in vacation in Panama.</p>
       <button onclick="navigator.clipboard.writeText(window.location.href.split('#')[0] + '#poem-2025-1'); alert('Link copied!')">Copy Link</button>
     </article> 
 
-    <article id="poem-2024-1" class="poem-item" data-year="2024" data-lang="it">
-      <h3>La strada di vento</h3>
-      <p class="meta">2024 • Italian</p>
+    <article id="poem-2011-1" class="poem-item" data-year="2011" data-lang="de">
+      <h3>Der Mond schien helle</h3>
+      <p class="meta">August 2011 • German</p>
       <pre>
 Prima riga della poesia,
 seconda riga della poesia.
       </pre>
+      <h4>Genesis</h4>
+      <p class="meta">
+When I was a child, I believed that by following the path traced by the moon reflected
+on the water, one would reach the gates of another world. A magical and mysterious world. However,
+the journey had to be made in secret, and in pairs. Without being seen by anyone, on a little boat.
+Because otherwise, the gates would disappear.</p>
     </article>
 
     <article id="poem-2023-1" class="poem-item" data-year="2023" data-lang="de">
-      <h3>Abendrot</h3>
+      <h3>1</h3>
       <p class="meta">2023 • German</p>
       <pre>
-Erste Zeile des Gedichts,
-zweite Zeile des Gedichts.
+1
+1.
       </pre>
     </article>
 
