--- a/poems.html
+++ b/poems.html
@@ -114,6 +114,8 @@ When I was a child, I believed that by following the path traced by the moon ref
 on the water, one would reach the gates of another world. A magical and mysterious world. However,
 the journey had to be made in secret, and in pairs. Without being seen by anyone, on a little boat.
 Because otherwise, the gates would disappear.</p>
+      
+    <button onclick="navigator.clipboard.writeText(window.location.href.split('#')[0] + '#poem-2025-1')">Copy Link</button>
     </article>
 
     <article id="poem-2023-1" class="poem-item" data-year="2023" data-lang="de">
