--- a/poems.html
+++ b/poems.html
@@ -54,8 +54,8 @@ c<!DOCTYPE html>
     
     <article id="poem-2015-1" class="poem-item" data-year="2015" data-lang="it">
       <h3>Crudel fato</h3>
-      <p class="meta">14th January 2015 • Italian</p>
-      <p class="meta">To Janosch</p>
+      <p class="meta">14th January 2015 • Italian
+      To Janosch </p>
       <pre>
 La tua figura si staglia sul cielo
 A volte maestosa e tagliente,
