--- a/poems.html
+++ b/poems.html
@@ -52,8 +52,8 @@ c<!DOCTYPE html>
   <section class="poem-list">
  <!-- Add more poems here as <article> -->
     
-    <article id="poem-2015-1" class="poem-item" data-year="2015" data-lang="it">
-      <h3>Crudel fato</h3>
+    <article class="poem-item" data-year="2015" data-lang="it">
+      <h3 id="poem-2015-1">Crudel fato</h3>
       <p class="meta">14th January 2015 • Italian
       To Janosch </p>
       <pre>
