--- a/poems.html
+++ b/poems.html
@@ -54,7 +54,7 @@ c<!DOCTYPE html>
     
     <article class="poem-item" data-year="2015" data-lang="it">
       <h3 id="poem-2015-1">Crudel fato</h3>
-      <p class="meta">14th January 2015 • Italian
+      <p class="meta">14th January 2015 • Italian <br>
       To Janosch </p>
       <pre>
 La tua figura si staglia sul cielo
