--- a/poems.html
+++ b/poems.html
@@ -133,6 +133,7 @@ Because otherwise, the gates would disappear.</p>
 
 <!-- Footer -->
 <footer>
+  <p>© Lara Mac Veeameroi. All rights reserved.</p>
   <p>Follow Lara Mac Veeameroi on <a href="https://instagram.com/lmv.author" target="_blank">Instagram</a> | Contact: <a href="mailto:lmv.author@proton.me">lmv.author@proton.me</a></p>
   <p>This site was created with the assistance of ChatGPT 5</p>
 </footer>
