--- a/poems.html
+++ b/poems.html
@@ -18,7 +18,7 @@ c<!DOCTYPE html>
   <nav class="navbar">
     <a href="index.html">Home</a>
     <a href="poems.html">Poems</a>
-    <a href="short-stories/">Short Stories</a>
+    <a href="short-stories.html">Short Stories</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
   </nav>
