--- a/about.html
+++ b/about.html
@@ -1,1 +1,43 @@
+c<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Poems — Lara Mac Veeameroi</title>
+  <link rel="stylesheet" href="assets/style.css">
+</head>
+<body>
 
+<!-- Fixed Header -->
+<header class="site-header">
+  <div class="logo">
+    <img src="assets/flower.jpg" alt="flower" class="flower-icon">
+    <h1>Lara Mac Veeameroi – Author</h1>
+  </div>
+  <nav class="navbar">
+    <a href="index.html">Home</a>
+    <a href="poems.html">Poems</a>
+    <a href="short-stories.html">Short Stories</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
+
+<!-- Main Content -->
+<main>
+  <section class="intro">
+    <h2>Contact form</h2>
+    <h2>e-mail:</h2>
+    <h2>instagram:</h2>
+  </section>
+</main>
+
+<!-- Footer -->
+<footer>
+  <p>© Lara Mac Veeameroi. All rights reserved.</p>
+  <p>Follow Lara Mac Veeameroi on <a href="https://instagram.com/lmv.author" target="_blank">Instagram</a> | Contact: <a href="mailto:lmv.author@proton.me">lmv.author@proton.me</a></p>
+  <p>This site was created with the assistance of ChatGPT 5</p>
+</footer>
+
+</body>
+</html>
