--- a/about.html
+++ b/about.html
@@ -1,9 +1,9 @@
-c<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Poems — Lara Mac Veeameroi</title>
+  <title>About — Lara Mac Veeameroi</title>
   <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
@@ -26,9 +26,8 @@ c<!DOCTYPE html>
 <!-- Main Content -->
 <main>
   <section class="intro">
-    <h2>Contact form</h2>
-    <h2>e-mail:</h2>
-    <h2>instagram:</h2>
+    <h2>About the author</h2>
+    <p>Lara Mac Veeameroi is an amateur poet and writer of short stories. She writes sirregularly but constantly since her childhood, moving between three different languages. Lara Mac Veeameroi is a keen supporter of nature rights and human rights, She identifies as sapphic.</p>
   </section>
 </main>
 
