--- a/contact.html
+++ b/contact.html
@@ -26,9 +26,9 @@
 <!-- Main Content -->
 <main>
   <section class="intro">
-    <h2>Contact form</h2>
-    <h2>e-mail:</h2>
-    <h2>instagram:</h2>
+    <p>To contact Lara Mac Veeameroi, fill out this form or use one of the contact details listed below.</p>
+    <p>e-mail: lmv.author@proton.me</p>
+    <p>instagar: @lmv.author</p>
   </section>
 </main>
 
