--- a/about.html
+++ b/about.html
@@ -27,7 +27,8 @@
 <main>
   <section class="intro">
     <h2>About the author</h2>
-    <p>Lara Mac Veeameroi is an amateur poet and writer of short stories. She writes sirregularly but constantly since her childhood, moving between three different languages. Lara Mac Veeameroi is a keen supporter of nature rights and human rights. She identifies as sapphic.</p>
+    <p>Lara Mac Veeameroi is an amateur poet and writer of short stories. She writes irregularly but constantly since her childhood, moving between three different languages.</p>
+    <p>Lara Mac Veeameroi is a keen supporter of nature rights and human rights. She identifies as sapphic.</p>
   </section>
 </main>
 
