--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,8 @@
 <!-- Main Content -->
 <main>
   <section class="intro">
-    <p>To contact Lara Mac Veeameroi, fill out this form or use one of the contact details listed below.</p>
+    <p>To contact Lara Mac Veeameroi, use one of the contact details listed below.</p>
+    <p>Offensive messages will be reported.</p>
     <p>e-mail: lmv.author@proton.me</p>
     <p>instagar: @lmv.author</p>
   </section>
