--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,7 @@
 <!-- Main Content -->
 <main>
   <section class="intro">
-    <p>To contact Lara Mac Veeameroi, use one of the contact details listed below.</p>
-    <p>Offensive messages will be reported.</p>
+    <p>To contact Lara Mac Veeameroi, use one of the contact details listed below.Offensive messages will be reported.</p>
     <p>Email: <a href="mailto:lmv.author@proton.me">lmv.author@proton.me</a></p>
     <p>Instagram: <a href="https://instagram.com/lmv.author" target="_blank">@lmv.author</a></p>
   </section>
