--- a/about.html
+++ b/about.html
@@ -27,10 +27,10 @@
 <main>
   <section class="intro">
     <h2>About the author</h2>
-    <p>Lara Mac Veeameroi is an amateur poet and writer of short stories. She writes irregularly but constantly since her childhood, moving between three different languages.
-      Lara Mac Veeameroi is a keen supporter of nature rights and human rights. She identifies as sapphic.
-      Her thematics include her struggles with depression, my struggles with depression, her efforts to find herself beneath layers of cultural moulding and painful experiences, and her relentless pursuit of hope.
-      An outdoors lover, she uses often imagery inspired from the natural world.
+    <p>
+      Lara Mac Veeameroi is an amateur poet and writer of short stories. She has written irregularly but consistently since childhood, moving fluidly between three different languages. <br>
+      A keen supporter of nature rights and human rights, she identifies as sapphic. Her work explores her struggles with depression, the effort to find herself beneath layers of cultural conditioning and painful experiences, and her relentless pursuit of hope. <br>
+      An outdoors lover, she often draws imagery from the natural world to shape her poetry and stories.
     </p>
   </section>
 </main>
