--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
 <footer>
   <p>© Lara Mac Veeameroi. All rights reserved.</p>
   <p>Follow Lara Mac Veeameroi on <a href="https://instagram.com/lmv.author" target="_blank">Instagram</a> | Contact: <a href="mailto:lmv.author@proton.me">lmv.author@proton.me</a></p>
-  <p>This site was created with the assistance of ChatGPT 5</p>
+  <p>The HTML and CSS code for this website was created with the assistance of ChatGPT 5.</p>
 </footer>
 
 </body>
