--- a/about.html
+++ b/about.html
@@ -28,8 +28,8 @@
   <section class="intro">
     <h2>About the author</h2>
     <p>
-      Lara Mac Veeameroi is an amateur poet and writer of short stories. She has written irregularly but consistently since childhood, moving fluidly between three different languages. <br>
-      A keen supporter of nature rights and human rights, she identifies as sapphic. Her work explores her struggles with depression, the effort to find herself beneath layers of cultural conditioning and painful experiences, and her relentless pursuit of hope. <br>
+      Lara Mac Veeameroi is an amateur poet and writer of short stories born in the late 80's. She has written irregularly but consistently since childhood, moving fluidly between three different languages. 
+      A keen supporter of nature rights and human rights, she identifies as sapphic. Her work explores her struggles with depression, the feeling of loneliness, the effort to find herself beneath layers of cultural conditioning and painful experiences, and her relentless pursuit of hope.
       An outdoors lover, she often draws imagery from the natural world to shape her poetry and stories.
     </p>
   </section>
