--- a/poems.html
+++ b/poems.html
@@ -119,8 +119,8 @@ Because otherwise, the gates would disappear.</p>
     </article>
 
     <article id="poem-2023-1" class="poem-item" data-year="2023" data-lang="de">
-      <h3>1</h3>
-      <p class="meta">2023 • German</p>
+      <h3>Dashes of Joy</h3>
+      <p class="meta">2025 • English</p>
       <pre>
 1
 1.
