--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 </header>
 
   
-<!-- Main Content -->
+<!-- Main Content 
+  https://www.deviantart.com/fantasystock/art/Seamless-Parchment-Texture-58517493
+  -->
 <main>
   <section class="intro">
     <p>Welcome to the official website of Lara Mac Veeameroi — poet, writer, and thinker.</p>
