--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
 <section class="latest-poems">
   <h2>Latest Poems</h2>
-  <ul>
-    <li><a id="latest-poem-link" href="#">Loading latest poem…</a></li>
+  <ul id="latest-poems-list">
+    <li>Loading latest poems…</li>
   </ul>
 </section>
 
@@ -49,7 +49,6 @@
 </footer>
 
 <script>
-// Fetch poems.html to find the most recent poem
 fetch('poems.html')
   .then(response => response.text())
   .then(data => {
@@ -61,18 +60,25 @@ fetch('poems.html')
       // Sort by year descending
       poems.sort((a, b) => b.dataset.year - a.dataset.year);
 
-      const recent = poems[0];
-      const recentLink = document.getElementById('latest-poem-link');
+      // Get the top 3
+      const latest = poems.slice(0, 3);
 
-      if (recentLink) {
-        // Update link href and text to show the title
-        recentLink.href = 'poems.html#' + recent.id;
-        recentLink.textContent = recent.querySelector('h3').textContent;
-      }
+      const ul = document.getElementById('latest-poems-list');
+      ul.innerHTML = ''; // clear placeholder
+
+      latest.forEach(p => {
+        const li = document.createElement('li');
+        const a = document.createElement('a');
+        a.href = 'poems.html#' + p.id;
+        a.textContent = p.querySelector('h3').textContent;
+        li.appendChild(a);
+        ul.appendChild(li);
+      });
     }
   })
-  .catch(err => console.error('Error loading latest poem:', err));
+  .catch(err => console.error('Error loading latest poems:', err));
 </script>
+
 
 
 </body>
