--- a/index.html
+++ b/index.html
@@ -8,12 +8,8 @@
 </head>
 <body>
 
-<!-- Fixed Header -->
+<!-- Header -->
 <header class="site-header">
-  <div class="logo">
-    <img src="assets/flower.jpg" alt="flower" class="flower-icon">
-    <h1>Lara Mac Veeameroi – Author</h1>
-  </div>
   <nav class="navbar">
     <a href="index.html">Home</a>
     <a href="poems.html">Poems</a>
@@ -23,7 +19,6 @@
   </nav>
 </header>
 
-  
 <!-- Main Content-->
 <main>
   <section class="intro">
