--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <!-- Header -->
 <header class="site-header">
+  <h1>Lara Mac Veeameroi – Author</h1>
   <nav class="navbar">
     <a href="index.html">Home</a>
     <a href="poems.html">Poems</a>
