--- a/short-stories.html
+++ b/short-stories.html
@@ -9,13 +9,9 @@
 </head>
 <body>
 
-  
 <!-- Fixed Header -->
 <header class="site-header">
-  <div class="logo">
-    <img src="assets/flower.jpg" alt="flower" class="flower-icon">
-    <h1>Lara Mac Veeameroi – Author</h1>
-  </div>
+  <h1>Lara Mac Veeameroi</h1>
   <nav class="navbar">
     <a href="index.html">Home</a>
     <a href="poems.html">Poems</a>
