--- a/poems.html
+++ b/poems.html
@@ -192,7 +192,7 @@ window.addEventListener('load', ()=>{
 // Initial filter
 applyFilters();
 
-<!-- Table of contents -->
+// Table of contents 
   const poems = document.querySelectorAll('.poem-item');
   const tocList = document.getElementById('toc-list');
   poems.forEach(p => {
