--- a/poems.html
+++ b/poems.html
@@ -122,13 +122,28 @@ Because otherwise, the gates would disappear.</p>
     <button onclick="navigator.clipboard.writeText(window.location.href.split('#')[0] + '#poem-2011-1')">Copy Link</button>
     </article>
 
-    <article id="poem-2023-1" class="poem-item" data-year="2023" data-lang="de">
-      <h3>Dashes of Joy</h3>
-      <p class="meta">2025 • English</p>
+    <article id="poem-2009-1" class="poem-item" data-year="2009" data-lang="it">
+      <h3>Mosca Bianca</h3>
+      <p class="meta">2009 • Italian</p>
       <pre>
-1
-1.
+Oh Mosca bianca, tanto sprezzata per la tua diversità!
+Non sanno vedere
+Le tue compagne nere
+Il valore della tua originalità
+Guarda!  La tua tintura alabastrina 
+Ti eguaglia alle margherite del prato. 
+Attraversando tempeste di semi di tarassaco
+Vibra l’ala tua cristallina,
+Roteano le caliptra ronzanti.
+Finché una notte, trascinata troppo lontana dal vento
+Hai alzato  lo sguardo al firmamento
+E hai visto mille mosche bianche.
       </pre>
+      <h4>Genesis</h4>
+      <p class="meta">
+About being different and finding companionship in beauty. Was among the firsts in a literary competition in Italy. </p>
+    <button onclick="navigator.clipboard.writeText(window.location.href.split('#')[0] + '#poem-2009-1')">Copy Link</button>
+    </article>
     </article>
 
 
